fix conflict and lazada auto sync